--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                                         موسسه تحصیلات عالی علامه <br/> معاونیت علمی<br/>
                                                     </td>
                                                     <td>
-                                                        <img src="C:\Users\Boss\Desktop\aLL\maIN\Allamah\assets\images\logo.png" name="photo" style="width:100px;">
+                                                        <img src="https://allamah.edu.af/portal/assets/dist/img/logo.png" name="photo" style="width:100px;">
                                                     </td>
                                                 </tr>
                                             </table>
@@ -514,7 +514,7 @@
                                                         موسسه تحصیلات عالی علامه <br/> معاونیت علمی<br/>
                                                     </td>
                                                     <td>
-                                                        <img src="C:\Users\Boss\Desktop\aLL\maIN\Allamah\assets\images\logo.png" name="photo" style="width:100px;">
+                                                        <img src="https://allamah.edu.af/portal/assets/dist/img/logo.png" name="photo" style="width:100px;">
                                                     </td>
                                                 </tr>
                                             </table>
